public-api/tests/snapshots/public_api_lib_tests__auto_traits.snap
---
source: public-api/tests/public-api-lib-tests.rs
expression: api
---
pub mod auto_traits
pub struct auto_traits::NotSendNorSync
impl core::marker::Freeze for auto_traits::NotSendNorSync
impl !core::marker::Send for auto_traits::NotSendNorSync
impl !core::marker::Sync for auto_traits::NotSendNorSync
impl core::marker::Unpin for auto_traits::NotSendNorSync
impl core::panic::unwind_safe::RefUnwindSafe for auto_traits::NotSendNorSync
impl core::panic::unwind_safe::UnwindSafe for auto_traits::NotSendNorSync
pub struct auto_traits::SendAndSync
impl core::marker::Freeze for auto_traits::SendAndSync
impl core::marker::Send for auto_traits::SendAndSync
impl core::marker::Sync for auto_traits::SendAndSync
impl core::marker::Unpin for auto_traits::SendAndSync
impl core::panic::unwind_safe::RefUnwindSafe for auto_traits::SendAndSync
impl core::panic::unwind_safe::UnwindSafe for auto_traits::SendAndSync
pub struct auto_traits::SendNotSync
impl !core::marker::Freeze for auto_traits::SendNotSync
impl core::marker::Send for auto_traits::SendNotSync
impl !core::marker::Sync for auto_traits::SendNotSync
impl core::marker::Unpin for auto_traits::SendNotSync
impl !core::panic::unwind_safe::RefUnwindSafe for auto_traits::SendNotSync
impl core::panic::unwind_safe::UnwindSafe for auto_traits::SendNotSync
