public-api/tests/snapshots/public_api_lib_tests__comprehensive_api_proc_macro.snap
---
source: public-api/tests/public-api-lib-tests.rs
expression: api
---
pub mod comprehensive_api_proc_macro
pub proc macro comprehensive_api_proc_macro::#[derive(SimpleDeriveMacro)]
pub proc macro comprehensive_api_proc_macro::simple_proc_macro!()
pub proc macro comprehensive_api_proc_macro::#[simple_proc_macro_attribute]
