public-api/tests/snapshots/public_api_lib_tests__empty_diff.snap
---
source: public-api/tests/public-api-lib-tests.rs
expression: diff
---
PublicApiDiff {
    removed: [],
    changed: [],
    added: [],
}
