public-api/tests/snapshots/public_api_lib_tests__example_api-v0.2.0-omit_blanket_impls.snap
---
source: public-api/tests/public-api-lib-tests.rs
expression: api
---
pub mod example_api
#[non_exhaustive] pub struct example_api::Struct
pub example_api::Struct::v1_field: usize
pub example_api::Struct::v2_field: usize
impl core::fmt::Debug for example_api::Struct
pub fn example_api::Struct::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::marker::Freeze for example_api::Struct
impl core::marker::Send for example_api::Struct
impl core::marker::Sync for example_api::Struct
impl core::marker::Unpin for example_api::Struct
impl core::panic::unwind_safe::RefUnwindSafe for example_api::Struct
impl core::panic::unwind_safe::UnwindSafe for example_api::Struct
pub struct example_api::StructV2
pub example_api::StructV2::field: usize
impl core::marker::Freeze for example_api::StructV2
impl core::marker::Send for example_api::StructV2
impl core::marker::Sync for example_api::StructV2
impl core::marker::Unpin for example_api::StructV2
impl core::panic::unwind_safe::RefUnwindSafe for example_api::StructV2
impl core::panic::unwind_safe::UnwindSafe for example_api::StructV2
pub fn example_api::function(v1_param: example_api::Struct, v2_param: usize)
