public-api/tests/snapshots/public_api_lib_tests__example_api-v0.2.0-simplified_without_auto_derived_impls.snap
---
source: public-api/tests/public-api-lib-tests.rs
expression: api
---
pub mod example_api
#[non_exhaustive] pub struct example_api::Struct
pub example_api::Struct::v1_field: usize
pub example_api::Struct::v2_field: usize
pub struct example_api::StructV2
pub example_api::StructV2::field: usize
pub fn example_api::function(v1_param: example_api::Struct, v2_param: usize)
