public-api/tests/snapshots/public_api_lib_tests__rustup-toolchain.snap
---
source: public-api/tests/public-api-lib-tests.rs
expression: public_api
---
pub mod rustup_toolchain
#[non_exhaustive] pub enum rustup_toolchain::Error
pub rustup_toolchain::Error::IoError(std::io::error::Error)
pub rustup_toolchain::Error::RustupToolchainInstallError
pub rustup_toolchain::Error::StdSyncPoisonError
impl core::convert::From<std::io::error::Error> for rustup_toolchain::Error
pub fn rustup_toolchain::Error::from(source: std::io::error::Error) -> Self
impl core::error::Error for rustup_toolchain::Error
pub fn rustup_toolchain::Error::source(&self) -> core::option::Option<&(dyn core::error::Error + 'static)>
impl core::fmt::Debug for rustup_toolchain::Error
pub fn rustup_toolchain::Error::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::fmt::Display for rustup_toolchain::Error
pub fn rustup_toolchain::Error::fmt(&self, __formatter: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::marker::Freeze for rustup_toolchain::Error
impl core::marker::Send for rustup_toolchain::Error
impl core::marker::Sync for rustup_toolchain::Error
impl core::marker::Unpin for rustup_toolchain::Error
impl !core::panic::unwind_safe::RefUnwindSafe for rustup_toolchain::Error
impl !core::panic::unwind_safe::UnwindSafe for rustup_toolchain::Error
impl<T, U> core::convert::Into<U> for rustup_toolchain::Error where U: core::convert::From<T>
pub fn rustup_toolchain::Error::into(self) -> U
impl<T, U> core::convert::TryFrom<U> for rustup_toolchain::Error where U: core::convert::Into<T>
pub type rustup_toolchain::Error::Error = core::convert::Infallible
pub fn rustup_toolchain::Error::try_from(value: U) -> core::result::Result<T, <T as core::convert::TryFrom<U>>::Error>
impl<T, U> core::convert::TryInto<U> for rustup_toolchain::Error where U: core::convert::TryFrom<T>
pub type rustup_toolchain::Error::Error = <U as core::convert::TryFrom<T>>::Error
pub fn rustup_toolchain::Error::try_into(self) -> core::result::Result<U, <U as core::convert::TryFrom<T>>::Error>
impl<T> alloc::string::ToString for rustup_toolchain::Error where T: core::fmt::Display + ?core::marker::Sized
pub fn rustup_toolchain::Error::to_string(&self) -> alloc::string::String
impl<T> core::any::Any for rustup_toolchain::Error where T: 'static + ?core::marker::Sized
pub fn rustup_toolchain::Error::type_id(&self) -> core::any::TypeId
impl<T> core::borrow::Borrow<T> for rustup_toolchain::Error where T: ?core::marker::Sized
pub fn rustup_toolchain::Error::borrow(&self) -> &T
impl<T> core::borrow::BorrowMut<T> for rustup_toolchain::Error where T: ?core::marker::Sized
pub fn rustup_toolchain::Error::borrow_mut(&mut self) -> &mut T
impl<T> core::convert::From<T> for rustup_toolchain::Error
pub fn rustup_toolchain::Error::from(t: T) -> T
pub fn rustup_toolchain::ensure_installed(toolchain: &str) -> rustup_toolchain::Result<()>
pub fn rustup_toolchain::install(toolchain: impl core::convert::AsRef<str>) -> rustup_toolchain::Result<()>
pub fn rustup_toolchain::is_installed(toolchain: &str) -> rustup_toolchain::Result<bool>
pub type rustup_toolchain::Result<T> = core::result::Result<T, rustup_toolchain::Error>
